--- a/CruzadaSite/Cruzada/templates/pedidos.html
+++ b/CruzadaSite/Cruzada/templates/pedidos.html
@@ -53,7 +53,7 @@
                                                         <span class="label label-success w-300">{{ pedido.estado }}</span>
                                                     </td>
                                                     <td class="dt-center">
-                                                        <a href="{% url 'pedido_detalle' pedido_id=pedido.id %}" class="edit btn btn-sm btn-default"><i class="fa fa-pencil"></i> Edit</a>
+                                                        <a href="{% url 'pedido_detalle' pedido_id=pedido.id %}" class="edit btn btn-sm btn-default"><i class="fa fa-pencil"></i> Editar</a>
                                                     </td>
                                                 </tr>
                                                 {% endfor %}
