--- a/CruzadaSite/Cruzada/templates/login.html
+++ b/CruzadaSite/Cruzada/templates/login.html
@@ -37,7 +37,7 @@
                     </div>
                     <div class="login-logo">
                         <a href="http://www.gadberry.net/" target="_blank">
-                            <img src="{{ STATIC_URL }}img/gglogo.png" alt="Company Logo">
+                            <img src="{{ STATIC_URL }}img/logo.png" alt="Company Logo">
                         </a>
                     </div>
                     <hr>
