--- a/CruzadaSite/Cruzada/templates/articulos.html
+++ b/CruzadaSite/Cruzada/templates/articulos.html
@@ -18,9 +18,9 @@
             <div class="page-title pull-left">
                 <h3 class="pull-left"><strong>Gestionar Artículos</strong></h3>
             </div>
-             <div class="pull-right">
-                <a href="ecommerce_product_view.html" class="btn btn-success m-t-10"><i class="fa fa-plus p-r-10"></i>Agregar un artículo</a>
-            </div>
+{#             <div class="pull-right">#}
+{#                <a href="ecommerce_product_view.html" class="btn btn-success m-t-10"><i class="fa fa-plus p-r-10"></i>Agregar un artículo</a>#}
+{#            </div>#}
         </div>
         <div class="row">
             <div class="col-md-12">
@@ -42,10 +42,10 @@
                                             </th>
                                             <th class="dt-center"><strong>Stock</strong>
                                             </th>
-                                            <th class="dt-center"><strong>Ventas</strong>
-                                            </th>
-                                            <th class="dt-center"><strong>Acciones</strong>
-                                            </th>
+{#                                            <th class="dt-center"><strong>Ventas</strong>#}
+{#                                            </th>#}
+{#                                            <th class="dt-center"><strong>Acciones</strong>#}
+{#                                            </th>#}
                                         </tr>
                                     </thead>
                                     <tbody >
@@ -62,14 +62,14 @@
 {#                                                </div>#}
 {#                                            </td>#}
                                             <td class="dt-center"><strong>{{ articulo.stock }}</strong></td>
-                                            <td class="text-center">
-                                                <div class="sparkline" data-sparkline-color="#7BB2B4"
-                                                data-sparkline-value="[13,14,16,15,4,14,20,14,12]"></div>
-                                            </td>
-                                            <td class="text-center ">
-                                                <a href="ecommerce_product_view.html" class="edit btn btn-sm btn-default"><i class="fa fa-pencil"></i> Edit</a>
+{#                                            <td class="text-center">#}
+{#                                                <div class="sparkline" data-sparkline-color="#7BB2B4"#}
+{#                                                data-sparkline-value="[13,14,16,15,4,14,20,14,12]"></div>#}
+{#                                            </td>#}
+{#                                            <td class="text-center ">#}
+{#                                                <a href="ecommerce_product_view.html" class="edit btn btn-sm btn-default"><i class="fa fa-pencil"></i> Edit</a>#}
 {#                                                <a href="#" class="delete btn btn-sm btn-default"><i class="fa fa-times-circle"></i> Remove</a>#}
-                                            </td>
+{#                                            </td>#}
                                         </tr>
                                         {% endfor %}
                                     </tbody>
